testsuite/tests/typing-small-numbers/naked.ml.upstream_compatible.reference
Line 28, characters 9-17:
28 | type t = float32#;;
              ^^^^^^^^
Error: Unbound type constructor "float32#"
Hint: Did you mean "float#"?
Line 2, characters 18-19:
2 | external ignore : t -> unit = "%ignore"
                      ^
Error: Unbound type constructor "t"
Line 1, characters 16-20:
1 | let () = ignore #1.s;;
                    ^^^^
Error: Found the float32# literal "#1.s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-22:
1 | let () = ignore #1e10s;;
                    ^^^^^^
Error: Found the float32# literal "#1e10s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-22:
1 | let () = ignore #1e+1s;;
                    ^^^^^^
Error: Found the float32# literal "#1e+1s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-22:
1 | let () = ignore #1e-1s;;
                    ^^^^^^
Error: Found the float32# literal "#1e-1s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-27:
1 | let () = ignore #0x111.000s;;
                    ^^^^^^^^^^^
Error: Found the float32# literal "#0x111.000s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-26:
1 | let () = ignore #0x1.4p+0s;;
                    ^^^^^^^^^^
Error: Found the float32# literal "#0x1.4p+0s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-41:
1 | let () = ignore #0xf.ffffffffffff8p+1020s;;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Found the float32# literal "#0xf.ffffffffffff8p+1020s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-26:
1 | let () = ignore #0x8p-972s;;
                    ^^^^^^^^^^
Error: Found the float32# literal "#0x8p-972s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 1, characters 16-33:
1 | let () = ignore #0xc.d5e6fp+1_24s;;
                    ^^^^^^^^^^^^^^^^^
Error: Found the float32# literal "#0xc.d5e6fp+1_24s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 2, characters 8-13:
2 |   match #0.0s with
            ^^^^^
Error: Found the float32# literal "#0.0s", but float32# literals are not enabled. You must enable -extension small_numbers to use this feature.
Line 2, characters 9-14:
2 | type t = char#;;
             ^^^^^
Error: Unbound type constructor "char#"
Hint: Did you mean "char"?
Line 2, characters 18-19:
2 | external ignore : t -> unit = "%ignore"
                      ^
Error: Unbound type constructor "t"
Line 1, characters 16-23:
1 | let () = ignore #'\000';;
                    ^^^^^^^
Error: Found the char# literal "#'\000'", but char# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-23:
1 | let () = ignore #'\x80';;
                    ^^^^^^^
Error: Found the char# literal "#'\128'", but char# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 18-25:
1 | let () = ignore (-#'\x80');;
                      ^^^^^^^
Error: Found the char# literal "#'\128'", but char# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 8-15:
2 |   match #'\x80' with
            ^^^^^^^
Error: Found the char# literal "#'\128'", but char# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 18-19:
2 | external ignore : t -> unit = "%ignore"
                      ^
Error: Unbound type constructor "t"
Line 1, characters 16-22:
1 | let () = ignore (-#1y);;
                    ^^^^^^
Error: Found the int8# literal "(-#1y)", but int8# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-23:
1 | let () = ignore #0xfffy;;
                    ^^^^^^^
Error: Found the int8# literal "#0xfffy", but int8# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-24:
1 | let () = ignore (-#0o7y);;
                    ^^^^^^^^
Error: Found the int8# literal "(-#0o7y)", but int8# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-27:
1 | let () = ignore (-#0b1010y);;
                    ^^^^^^^^^^^
Error: Found the int8# literal "(-#0b1010y)", but int8# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 8-14:
2 |   match -#0xfy with
            ^^^^^^
Error: Found the int8# literal "(-#0xfy)", but int8# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 18-19:
2 | external ignore : t -> unit = "%ignore"
                      ^
Error: Unbound type constructor "t"
Line 1, characters 16-22:
1 | let () = ignore (-#1w);;
                    ^^^^^^
Error: Found the int16# literal "(-#1w)", but int16# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-23:
1 | let () = ignore #0xfffw;;
                    ^^^^^^^
Error: Found the int16# literal "#0xfffw", but int16# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-24:
1 | let () = ignore (-#0o7w);;
                    ^^^^^^^^
Error: Found the int16# literal "(-#0o7w)", but int16# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-27:
1 | let () = ignore (-#0b1010w);;
                    ^^^^^^^^^^^
Error: Found the int16# literal "(-#0b1010w)", but int16# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 8-14:
2 |   match -#0xfw with
            ^^^^^^
Error: Found the int16# literal "(-#0xfw)", but int16# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 2, characters 18-19:
2 | external ignore : t -> unit = "%ignore"
                      ^
Error: Unbound type constructor "t"
Line 1, characters 16-22:
1 | let () = ignore (-#1i);;
                    ^^^^^^
Error: Found the int# literal "(-#1i)", but int# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-23:
1 | let () = ignore #0xfffi;;
                    ^^^^^^^
Error: Found the int# literal "#0xfffi", but int# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-24:
1 | let () = ignore (-#0o7i);;
                    ^^^^^^^^
Error: Found the int# literal "(-#0o7i)", but int# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.
Line 1, characters 16-27:
1 | let () = ignore (-#0b1010i);;
                    ^^^^^^^^^^^
Error: Found the int# literal "(-#0b1010i)", but int# literals are not enabled. You must enable -extension small_numbers_beta to use this feature.


Line 6, characters 0-0:
Error: Syntax error

